# mumble-universal-mute

./: Cargo.toml  README.md  mumble_sources
packaging/: create_package.ps1  manifest.xml
src/: lib.rs
