[package]
name = "mumble_mute_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mumble-sys = "0.1.0"

[dependencies.windows]
version = "0.44.0"
features = [
    "Foundation",
    "ApplicationModel_Calls",
]

[patch.crates-io]
mumble-sys = { path = "../rust-mumble-sys" }
